--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html(lang="ko")
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     title Focus
-    link(href="bootstrap/css/bootstrap.min.css" rel="stylesheet")
+    link(href="/bootstrap/css/bootstrap.min.css" rel="stylesheet")
   body
     style.
       #container{
@@ -19,16 +19,16 @@ html(lang="ko")
       .row
         nav.col-md-2
           h3
-            a(href='list') List Page
+            a(href='/list') Music List
           h3
-            a(href='login') Login Page
+            a(href='/auth/login') Login
           h3
-            a(href='add') Register Page
+            a(href='/add') List add
           h3
-            a(href='bootstr') Bootstrap
+            a(href='/auth/register') Register
         article.col-md-8
           block content
 
 
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
-    script(src="bootstrap/js/bootstrap.min.js")
+    script(src="/bootstrap/js/bootstrap.min.js")
