--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html(lang="ko")
       .row
         header.jumbotron.text-center
           h1
-            a(href='/') Hello, world!
+            a(href='/') Focus at Music
       .row
         nav.col-md-2
           h3
@@ -23,7 +23,7 @@ html(lang="ko")
           h3
             a(href='/auth/login') Login
           h3
-            a(href='/add') List add
+            a(href='/add') Music Add
           h3
             a(href='/auth/register') Register
         article.col-md-8
