--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends ../views/layout
 block content
   form(action='/auth/login' method='post')
     p
-      input(type='text' placeholder='ID' name='id')
+      input(type='text' placeholder='ID' name='username')
     p
       input(type='text' placeholder='Password' name='password')
     p
