--- a/server_side_project/views/add.pug
+++ b/server_side_project/views/add.pug
@@ -1,22 +1,11 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-  body
-    h1
-      a(href='/') Server Side Javascript
-    ul
-      each topic in topics
-        li
-          - rid = encodeURIComponent(topic['@rid'])
-          a(href='/'+rid)= topic.title
-    aticle
-      form(action='/add', method='post')
-        p
-          input(type='text', name='title', placeholder='title')
-        p
-          textarea(name='description', placeholder='Description')
-        p
-          input(type='text', name='author', placeholder='author')
-        p
-          input(type='submit')
+extends layout
+block content
+  form(action='/add' method='post')
+    p
+      input(type='text' name='title' placeholder='Title')
+    p
+      input(type='text' name='description' placeholder='Description')
+    p
+      input(type='text' name='author' placeholder='Author')
+    p
+      input(type='submit')
