--- a/server_side_project/views/login.pug
+++ b/server_side_project/views/login.pug
@@ -1,11 +1,37 @@
-extends ../views/layout
-block content
-  form(action='/auth/login' method='post')
-    .input-group
-      input.form-control(type='text' name='username' placeholder='Username' aria-describedby='basic-addon1')
-    p
-    .input-group
-      input.form-control(type='text' name='password' placeholder='Password' aria-describedby='basic-addon1')
-    p
-    p
-      input(type='submit')
+doctype html
+html(lang="ko")
+  head
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    title Focus
+    link(href="/bootstrap/css/bootstrap.min.css" rel="stylesheet")
+  body
+    style.
+      #container{
+        padding-top:5px;
+      }
+      .jumbotron{
+        background-color: #151515;
+        test-align: center;
+      }
+    .container(id="container")
+      .row
+        header.jumbotron.text-center
+          h1
+            a(href='/') Login Page
+      .row
+        .col-md-12(id='form')
+          form(action='/auth/login' method='post')
+            .input-group
+              input.form-control(type='text' name='username' placeholder='Username' aria-describedby='basic-addon1')
+            p
+            .input-group
+              input.form-control(type='password' name='password' placeholder='Password' aria-describedby='basic-addon1')
+            p
+            p
+              input(type='submit')
+
+
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
+    script(src="/bootstrap/js/bootstrap.min.js")
