--- a/server_side_project/views/register.pug
+++ b/server_side_project/views/register.pug
@@ -4,7 +4,7 @@ block content
     p
       input(type='text' name='username' placeholder='username')
     p
-      input(type='text' name='password' placeholder='password')
+      input(type='password' name='password' placeholder='password')
     p
       input(type='text' name='displayName' placeholder='displayName')
     p
